@@ -9,7 +9,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -23,10 +22,14 @@ public class GiftCertificateResponseDtoMapper {
 
     public GiftCertificateResponseDto toDto(GiftCertificate entity) {
         GiftCertificateResponseDto dto = Objects.isNull(entity) ? null : mapper.map(entity, GiftCertificateResponseDto.class);
-        List<TagDto> tagsDto = entity.getGiftCertificateTags().stream()
-                .map(tagDtoMapper::toDto)
-                .collect(Collectors.toList());
-        dto.setTagsDto(tagsDto);
+        if (entity != null) {
+            List<TagDto> tagsDto = entity.getGiftCertificateTags() == null
+                    ? null
+                    : entity.getGiftCertificateTags().stream()
+                    .map(tagDtoMapper::toDto)
+                    .toList();
+            dto.setTagsDto(tagsDto);
+        }
         return dto;
     }
 }
